--- a/css/include/initial.css
+++ b/css/include/initial.css
@@ -1102,6 +1102,21 @@ a {
 May be able at some point to simplify this using regular link underlining, since CSS4's `text-decoration-skip-ink` by default avoids overlapping with text descenders (but as of Oct 2019, no Edge/IE or Safari support, and only the latest Firefox 70 supports it; maybe in a few years...): https://developer.mozilla.org/en-US/docs/Web/CSS/text-decoration-skip-ink#Browser_Compatibility https://www.caniuse.com/#feat=mdn-css_properties_text-decoration-skip-ink (Right now, Firefox skip-ink looks quite bad: it doesn't skip enough ink, defeating the point, and also positions the underline badly!)
 */
 
+/*	Color-inverted containers.
+ */
+.markdownBody .colors-invert a {
+    color: var(--GW-body-link-inverted-color);
+}
+.markdownBody .colors-invert a:hover {
+    color: var(--GW-body-link-inverted-hover-color);
+}
+.markdownBody .colors-invert a:visited {
+	color: var(--GW-body-link-inverted-visited-color);
+}
+.markdownBody .colors-invert a:visited:hover {
+    color: var(--GW-body-link-inverted-hover-color);
+}
+
 .markdownBody a {
 	--link-underline-background-color: var(--background-color);
 	--link-underline-gradient-line-color: currentColor;
