Small tweak to layout layer stacking

--- a/css/default.css
+++ b/css/default.css
@@ -3450,11 +3450,16 @@ body.lorem div[class^='drop-cap'] {
     left: 0;
     width: 100%;
     height: 100%;
-    z-index: 10000;
+    z-index: 9999;
     pointer-events: none;
 }
 #ui-elements-container > * {
     pointer-events: auto;
+}
+@media only screen and (hover: hover) {
+	#ui-elements-container:hover {
+		z-index: 10001;
+	}
 }
 
 
