--- a/css/include/initial.css
+++ b/css/include/initial.css
@@ -36,13 +36,16 @@
 /* GENERAL */
 /***********/
 
+html {
+    font-size: var(--GW-base-font-size);
+}
+
 html,
 .shadow-body {
 	--background-color: var(--GW-body-background-color);
 
     background-color: var(--background-color);
     color: var(--GW-body-text-color);
-    font-size: var(--GW-base-font-size);
     font-weight: 400;
     font-family: var(--GW-serif-font-stack);
 }
@@ -340,7 +343,7 @@ header h1 em {
 @media all and (min-width: 650px) {
     #page-metadata {
         overflow: auto;
-        font-size: calc((19/20) * var(--GW-base-font-size));
+        font-size: calc((19/20) * var(--GW-body-text-font-size));
     }
     #page-description {
         margin: 0 auto 0.75em auto;
@@ -349,13 +352,13 @@ header h1 em {
     }
     #page-metadata-block,
     #page-metadata > .link-tags {
-        font-size: calc((18/20) * var(--GW-base-font-size));
+        font-size: calc((18/20) * var(--GW-body-text-font-size));
     }
 }
 @media all and (max-width: 649px) {
     #page-metadata {
         overflow: visible;
-        font-size: calc((17/18) * var(--GW-base-font-size));
+        font-size: calc((17/18) * var(--GW-body-text-font-size));
     }
     #page-description {
         margin: 0 auto 1em auto;
@@ -369,7 +372,7 @@ header h1 em {
         margin: 0 auto 0.75em auto;
     }
     #page-metadata-block {
-        font-size: calc((16/18) * var(--GW-base-font-size));
+        font-size: calc((16/18) * var(--GW-body-text-font-size));
         line-height: calc(25/16);
     }
     #page-metadata-block > #page-author::after,
