Fix obscure site logo layout bug

--- a/include/inlined-head.html
+++ b/include/inlined-head.html
@@ -1065,6 +1065,9 @@ main {
     display: flex;
     margin: 1px 0;
 }
+#sidebar a#logo svg {
+	height: 100%;
+}
 @media all and (max-width: 649px) {
     #sidebar a#logo {
         padding: 0.5em 0.375em;
@@ -3888,6 +3891,6 @@ ReaderMode.injectStyleBlock(ReaderMode.styles, "reader-mode-styles");
 //  Activate saved mode, once the <body> element is loaded (and classes known).
 doWhenBodyExists(ReaderMode.setMode);
 </script>
-<link rel="preload" href="/static/css/fonts.css?v=1684522978" as="style" onload="this.onload = null; this.rel = 'stylesheet'">
+<link rel="preload" href="/static/css/fonts.css?v=1684559404" as="style" onload="this.onload = null; this.rel = 'stylesheet'">
 <link rel="preload" href="/static/css/default.css?v=1684522582" as="style" onload="this.onload = null; this.rel = 'stylesheet'">
 <link rel="preload" href="/static/css/links.css?v=1684430958" as="style" onload="this.onload = null; this.rel = 'stylesheet'">
