--- a/css/include/components/colors-dark-GENERATED.css
+++ b/css/include/components/colors-dark-GENERATED.css
@@ -252,7 +252,7 @@
     --GW-popins-popin-border-color: #7c7c7c;
     --GW-popins-box-shadow-color: #7c7c7c;
     --GW-popins-popin-title-bar-background-color: #000;
-    --GW-popins-popin-title-bar-button-color: #b4b4b4;
+    --GW-popins-popin-title-bar-button-color: #999;
     --GW-popins-popin-scrollbar-thumb-color: #5c5c5c;
     --GW-popins-popin-scrollbar-thumb-hover-color: #8b8b8b;
     --GW-popins-popin-stack-counter-text-color: #000;
